   * dynmat.x can calculate phonon contribution to dielectric tensor
   * CELL_PARAMETERS written on output using the same format as in input
   * turboTDDFT now supports hybrid functionals (only with norm-conserving
     pseudopotentials)
   * "image" parallelization re-introduced in pw.x: see code "manypw.x"

Incompatible changes in svn version:

   * Routine "electrons" doesn't deal any longer with non-scf cases;
     Use routine "non_scf" instead.
   * restart mechanism of pw.x changed a lot. It works ONLY if you stop
     the code cleanly with the prefix.EXIT file, or by setting "max_seconds";
     disk_io='high' no longer needed (use it ONLY if tight with memory)
     Restarting from hard crashes is no longer supported.
   * Major restructuring of DFT+U and related modules in PW: related variables
     moved to module ldaU, "swfcatom" moved to module "basis"
   * definition of "natomwfc" in PP/ follows the same login as in PW/
   * calls to "find_equiv_sites" and "writemodes" changed (fixed dimension
     "nax" removed)
   * call to "open_buffer" changed: unit must be a valid fortran unit > 0;
     max number of records is no longer specified; a new flag explicitly
     specifies if writing to RAM buffer is required. Functionalities of 
     Modules/buffers.f90 have been considerably modified and extended.

Fixed in svn version:

   * PHonon: epsil + paw was not working with k-point parallelization.
   * PHonon: problem with the symmetry analysis in D_6h. The problem appeared
     in special cases after the symmetry reshuffling made by the phonon code.
   * PWscf: starting with uniform charge worked only for non-spin-polarized
     calculations. Not a big deal unless one used HGH or other pseudopotentials
     without atomic charge information
   * PWscf: Forces with finite electric field (lelfield=.true.) and US PP
     were incorrect in parallel execution
   * D3: bug when the crystal has symmetry but the small group of the 
     q-point has no symmetry.